# mm

./: .gitignore  Cargo.toml  README.md  todo
assess/: deep.mms  fractal.mms  melody.mms  poly.mms  test.mms
crates/mm-eval/: Cargo.toml
crates/mm-eval/src/: alloc.rs  compile.rs  dependency.rs  eval.rs  implicit.rs  lib.rs  melody.rs  names.rs  note.rs  span.rs  state.rs  time.rs  topology.rs
crates/mm-eval/src/check/: build.rs  equation.rs  lower.rs  matrix.rs  mod.rs  solve.rs  tests.rs
crates/mm-eval/src/eval/: mod.rs  tests.rs
crates/mm-eval/src/parse/: lex.rs  mod.rs  rules.rs  tests.rs
crates/mm-gui/: Cargo.toml
crates/mm-gui/src/: grid.rs  lib.rs
crates/mm-gui/src/audio/: delay.rs  event.rs  mod.rs  synth.rs  time.rs
crates/mm-gui/src/clip_editor/: mod.rs  notes.rs
crates/mm-gui/src/code/: highlight.rs  mod.rs  program_buffer.rs
crates/mm-gui/src/melody/: mod.rs
crates/mm-gui/src/node_editor/: graph.rs  mod.rs
crates/mm-gui/src/structures/: latest.rs  mod.rs
crates/mm-gui/src/timeline/: mod.rs  tracks.rs
crates/mm-gui/src/ui/: mod.rs  plate.rs
crates/mm-media/: Cargo.toml
crates/mm-media/src/: lib.rs
crates/mm-media/src/midi/: channel.rs  mod.rs  pitch.rs
crates/mm-media/src/svg/: draw.rs  mod.rs  render.rs
docs/mm/: syntax.abnf
src/: error.rs  file.rs  gui.rs  main.rs
