[workspace]
members = ["crates/*"]

[package]
name = "mm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mm-eval = { path = "crates/mm-eval" }
mm-gui = { path = "crates/mm-gui" }
mm-media = { path = "crates/mm-media" }

ariadne = { version = "0.2", features = ["auto-color"] }
eframe = { version = "0.21", features = ["dark-light"] }
notify-debouncer-mini = "0.2"
