[package]
name = "mm-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mm-eval = { path = "../mm-eval" }
mm-media = { path = "../mm-media" }

cpal = "0.15"
egui = "0.21"
num-traits = "0.2"
ringbuf = "0.3"
